<resources>
    <string name="app_name">Asthra 2015</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="demo_expand_basetitle">Hello</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_registration_activty">RegistrationActivty</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_informals">InformalsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="map_title">SJCET Map</string>
    <string name="map_sub_title"></string>
    <string name="spinner_course">Course</string>
    <string name="spinner_department">Department</string>
    <string-array name="reg_courses">
        <item>B.Tech</item>
        <item>M.Tech</item>
        <item>Other</item>
    </string-array>
    <string-array name="reg_departments">
        <item>AEI</item>
        <item>CE</item>
        <item>CSE</item>
        <item>ECE</item>
        <item>EEE</item>
        <item>ME</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_event_info">EventInfoActivity</string>
    <string-array name="event_descriptions">
        <item>  Lucky Draw</item>
        <item>  Management</item>
        <item>  Treasure Hunt</item>
        <item>  Project Presentation</item>
        <item>  Games</item>
        <item>	Skill and Time Management</item>
        <item>	Paper Presentation</item>
        <item>	Tech Fun Zone</item>
        <item>	Quiz</item>
        <item>	Sand Castle Building</item>
        <item>	Paper Presentation</item>
        <item>	Treasure Hunt</item>
        <item>	Spot Construction</item>
        <item>	Computer Skills</item>
        <item>	Technical Treasure Hunt</item>
        <item>	Coding and Debugging</item>
        <item>	Tech Fun Zone</item>
        <item>	Robot Racing</item>
        <item>	Robot Soccer</item>
        <item>	Circuit Debugging</item>
        <item>	Tech Fun Zone</item>
        <item>	Laser Maze</item>
        <item>	Machine Assembly</item>
        <item>	Idea Presentation</item>
        <item>	Tech Fun Zone</item>
        <item>	Design and Troubleshooting</item>
        <item>	Technical Treasure Hunt</item>
        <item>	Paper Presentation</item>
        <item>	Scrap Assembly</item>
        <item>	Best Driver</item>
        <item>	Hydraulic Rocket War</item>
        <item>  Photography Workshop</item>
        <item>  Python Programming Workshop</item>
        <item>  Photography Contest</item>
        <item>  Group Selfie Contest</item>
        <item>  Poster Designing</item>
        <item>  Pattern Photography</item>
        <item/>
        <item/>
        <item/>
        <item/>
    </string-array>
    <string name="student_coordinators">Student Coordinators</string>
    <string name="staff_coordinator">Staff Coordinator</string>
    <string name="asthra_email_heading">Email Us</string>
    <string name="name_studcord1">Jerin Paul: +91 9633755567</string>
    <string name="name_studcord2">Tony Joseph: +91 9746830930</string>
    <string name="name_staffcord">Abi Mathew: +91 9447581511</string>
    <string name="asthra_email">contact@asthra2015.com</string>
</resources>